implementar_tipo_de_visualizacao_por_projeto_para_cada_usuario
