# app/Http/Requests/Project/UpdatePreferenceRequest.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Http\Requests\Project;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdatePreferenceRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'settings' => ['required', 'array'],
+            'settings.view_type' => ['required', 'string', 'in:card,list'],
+        ];
+    }
+}
