# storage/api-docs/api-docs.json
@@ -1828,6 +1828,72 @@
                 ]
             }
         },
+        "/api/admin/projects/{id}/preferences": {
+            "put": {
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "Atualiza as preferências do usuário para um projeto",
+                "operationId": "534221d9aa416e08b59b7ef9faf19229",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID do projeto",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Objeto com as configurações de preferência",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdatePreferenceRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Preferências atualizadas com sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "id": 1,
+                                    "user_id": 1,
+                                    "preferable_id": 15,
+                                    "preferable_type": "App\\\\Models\\\\Project",
+                                    "settings": {
+                                        "view_type": "list"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Ação não autorizada"
+                    },
+                    "404": {
+                        "description": "Projeto não encontrado"
+                    },
+                    "422": {
+                        "description": "Erro de validação de dados"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/admin/projects-user": {
             "get": {
                 "tags": [
@@ -3786,49 +3852,75 @@
                         ],
                         "example": "not_started"
                     },
-                    "type_project": {
-                        "type": "string",
-                        "example": "Desenvolvimento"
-                    },
-                    "date_project": {
-                        "type": "string",
-                        "format": "date",
-                        "example": "2025-12-31"
-                    },
                     "visibility": {
                         "type": "string",
                         "enum": [
                             "public",
                             "private"
                         ],
-                        "example": "private",
-                        "nullable": true
+                        "example": "public"
                     },
                     "members": {
+                        "description": "Array of user IDs to be members of the project.",
                         "type": "array",
                         "items": {
                             "type": "integer"
                         },
-                        "example": [
-                            1,
-                            2
-                        ],
+                        "example": "[1, 2]",
                         "nullable": true
                     },
-                    "description": {
+                    "type_project": {
                         "type": "string",
-                        "example": "Descrição detalhada do projeto.",
-                        "nullable": true
+                        "maxLength": 50,
+                        "example": "Web Development"
                     },
                     "link": {
                         "type": "string",
                         "format": "url",
-                        "example": "https://projeto.com",
+                        "maxLength": 255,
+                        "example": "https://example.com/project-link",
                         "nullable": true
                     },
                     "goal": {
                         "type": "string",
-                        "example": "Aumentar as vendas em 20%",
+                        "maxLength": 255,
+                        "example": "Increase user engagement by 20%",
+                        "nullable": true
+                    },
+                    "description": {
+                        "type": "string",
+                        "example": "A very detailed description of the project goals and deliverables.",
+                        "nullable": true
+                    },
+                    "date_project": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2025-12-31"
+                    },
+                    "category": {
+                        "type": "string",
+                        "maxLength": 100,
+                        "example": "Marketing",
+                        "nullable": true
+                    },
+                    "segment": {
+                        "type": "string",
+                        "maxLength": 100,
+                        "example": "B2B",
+                        "nullable": true
+                    },
+                    "settings": {
+                        "properties": {
+                            "view_type": {
+                                "type": "string",
+                                "enum": [
+                                    "card",
+                                    "list"
+                                ],
+                                "example": "list"
+                            }
+                        },
+                        "type": "object",
                         "nullable": true
                     }
                 },
@@ -3861,6 +3953,29 @@
                             1,
                             3
                         ]
+                    }
+                },
+                "type": "object"
+            },
+            "UpdatePreferenceRequest": {
+                "title": "Update Preference Request",
+                "required": [
+                    "settings"
+                ],
+                "properties": {
+                    "settings": {
+                        "description": "Configurações de preferência do usuário",
+                        "properties": {
+                            "view_type": {
+                                "type": "string",
+                                "enum": [
+                                    "card",
+                                    "list"
+                                ],
+                                "example": "list"
+                            }
+                        },
+                        "type": "object"
                     }
                 },
                 "type": "object"
@@ -5058,6 +5173,42 @@
                             "$ref": "#/components/schemas/User"
                         },
                         "readOnly": true
+                    }
+                },
+                "type": "object"
+            },
+            "ProjectPreference": {
+                "title": "Project Preference",
+                "description": "Preferências de um usuário para um projeto específico",
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "user_id": {
+                        "type": "integer"
+                    },
+                    "project_id": {
+                        "type": "integer"
+                    },
+                    "settings": {
+                        "properties": {
+                            "view_type": {
+                                "type": "string",
+                                "enum": [
+                                    "card",
+                                    "list"
+                                ]
+                            }
+                        },
+                        "type": "object"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time"
                     }
                 },
                 "type": "object"
